// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseText /> should render regular text 1`] = `
<Text
  color="hsla(0, 0%, 100%, 1)"
  fontFamily="Lato"
  fontSize="11px"
  fontStyle="normal"
  fontWeight={400}
  lineHeight="18px"
  style={
    Array [
      Object {
        "color": "hsla(0, 0%, 100%, 1)",
        "fontFamily": "Lato",
        "fontSize": 11,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 18,
        "textAlign": "left",
        "textDecorationLine": "none",
      },
    ]
  }
  textAlign="left"
  textDecorationLine="none"
>
  Displaying some text
</Text>
`;

exports[`<BaseText /> should render text in italics style with line-through 1`] = `
<Text
  color="hsla(0, 0%, 100%, 1)"
  fontFamily="Lato"
  fontSize="11px"
  fontStyle="italic"
  fontWeight={400}
  lineHeight="18px"
  style={
    Array [
      Object {
        "color": "hsla(0, 0%, 100%, 1)",
        "fontFamily": "Lato",
        "fontSize": 11,
        "fontStyle": "italic",
        "fontWeight": "400",
        "lineHeight": 18,
        "textAlign": "left",
        "textDecorationLine": "line-through",
      },
    ]
  }
  textAlign="left"
  textDecorationLine="line-through"
>
  Displaying some text
</Text>
`;

exports[`<BaseText /> should render text with default properties 1`] = `
<Text
  color="hsla(217, 56%, 17%, 1)"
  fontFamily="Lato"
  fontSize="17px"
  fontStyle="normal"
  fontWeight={400}
  lineHeight="24px"
  style={
    Array [
      Object {
        "color": "hsla(217, 56%, 17%, 1)",
        "fontFamily": "Lato",
        "fontSize": 17,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textAlign": "left",
        "textDecorationLine": "none",
      },
    ]
  }
  textAlign="left"
  textDecorationLine="none"
>
  Displaying some text
</Text>
`;
